--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -41,7 +41,8 @@ jobs:
          poetry run pytest
          --capture=no
          --override-ini=log_cli=true
-         --override-ini=log_cli_level=INFOtest/integration/test_create_dss_docker_image.py
+         --override-ini=log_cli_level=INFO
+         test/integration/test_create_dss_docker_image.py
        env: # Set the secret as an env variable
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
