--- a/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
@@ -5,6 +5,7 @@
     dss_facts:
       entrypoint: "{{user_home}}/entrypoint.py"
       docker_group: "{{ docker_group }}"
+      docker_runner: "{{ ansible_user }}"
       jupyter:
         virtualenv: "{{ jupyter_virtualenv }}"
         command: "{{ jupyter_virtualenv }}/bin/jupyter-lab"
