Fixed non-root-user access (#244)
* Fixed non-root-user access
* fixed create_image and test
* Removed variable re-declaration which caused an infinite loop in ansible :)
* re-ordered setuid and setgid commands

uid must be changes last, otherwise
user is no longer permitted to change groups or gid.

* Updated notebook-tests

use user ubuntu in Dockerfile
use sudo for moving test files
change user to juypter for actual test execution

* Updated entrypoint

implemented new strategy as specified in ticket comment
https://github.com/exasol/ai-lab/issues/241#issuecomment-1983837761

* Made entrypoint fail on insufficient group permissions for docker.sock

added test verifying exception in container.logs()

[run-notebook-tests]

Co-authored-by: Torsten Kilias <torsten.kilias@exasol.com>

--- a/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
@@ -4,11 +4,15 @@
   ansible.builtin.set_fact:
     dss_facts:
       entrypoint: "{{user_home}}/entrypoint.py"
+      docker_user: "{{ ansible_user }}"
+      docker_group: "{{ docker_group }}"
       jupyter:
         virtualenv: "{{ jupyter_virtualenv }}"
         command: "{{ jupyter_virtualenv }}/bin/jupyter-lab"
         port: "49494"
         user: "{{ user_name }}"
+        group: "{{ user_group }}"
+        home: "{{ user_home }}"
         password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='ailab') }}"
         logfile: "{{ user_home }}/jupyter-server.log"
       notebook_folder:
@@ -40,7 +44,7 @@
     owner: "{{ user_name }}"
     group: "{{ user_group }}"
     recurse: true
-  become: "{{ need_sudo }}"
+  become: "{{need_sudo}}"
 - name: Clear pip Cache
   ansible.builtin.file:
     path: /root/.cache/pip
