--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -36,13 +36,20 @@ jobs:
      - name: Setup Python & Poetry Environment
        uses: ./.github/actions/prepare_poetry_env
 
-     - name: Run build ai-lab tests
+     - name: Run Unit Tests
        run: >
          poetry run pytest
          --capture=no
          --override-ini=log_cli=true
          --override-ini=log_cli_level=INFO
          test/unit
+       
+     - name: Run Integration Tests
+       run: >
+         poetry run pytest
+         --capture=no
+         --override-ini=log_cli=true
+         --override-ini=log_cli_level=INFO
          test/integration
        env: # Set the secret as an env variable
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -79,6 +86,14 @@ jobs:
 
      - name: Setup Python & Poetry Environment
        uses: ./.github/actions/prepare_poetry_env
+
+     - name: Run Unit Tests
+       run: >
+         poetry run pytest
+         --capture=no
+         --override-ini=log_cli=true
+         --override-ini=log_cli_level=INFO
+         test/unit
 
      - name: Run notebook tests
        run: >
