--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -1,4 +1,4 @@
-name: Run Tests for CI Build
+name: CI Build
 
 on:
   push:
@@ -6,9 +6,30 @@ on:
       - "main"
 
 jobs:
-  run_build_ai_lab_tests:
+  run_unit_tests:
+    runs-on: ubuntu-latest
+
+    steps:
+     - uses: actions/checkout@v3
+       with:
+         fetch-depth: 0
+
+     - name: Setup Python & Poetry Environment
+       uses: ./.github/actions/prepare_poetry_env
+
+     - name: Run Unit Tests
+       run: >
+         poetry run pytest
+         --capture=no
+         --override-ini=log_cli=true
+         --override-ini=log_cli_level=INFO
+         test/unit
+
+  run_integration_tests:
+    name: Integration Tests
     environment: AWS_CI_TESTS
     runs-on: ubuntu-latest
+    needs: run_unit_tests
 
     steps:
      - uses: actions/checkout@v3
@@ -36,13 +57,12 @@ jobs:
      - name: Setup Python & Poetry Environment
        uses: ./.github/actions/prepare_poetry_env
 
-     - name: Run build ai-lab tests
+     - name: Run Integration Tests
        run: >
          poetry run pytest
          --capture=no
          --override-ini=log_cli=true
          --override-ini=log_cli_level=INFO
-         test/unit
          test/integration
        env: # Set the secret as an env variable
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -50,9 +70,11 @@ jobs:
          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
 
   run_notebook_tests:
+    name: Jupyter Notebook Tests
     if: "contains(github.event.head_commit.message, '[run-notebook-tests]')"
     environment: AWS_SAGEMAKER
     runs-on: ubuntu-latest
+    needs: run_unit_tests
 
     steps:
      - uses: actions/checkout@v3
