--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
@@ -13,5 +13,5 @@ jupyterlab_notebook_folder_initial: "{{ user_home }}/notebooks"
 jupyterlab_notebook_folder: "{{ user_home }}/notebooks"
 
 apt_dependencies:
-  - virtualenv=20.0.17-1ubuntu0.4
-  - git=1:2.25.1-1ubuntu3.12
+  - virtualenv=20.13.0+ds-2
+  - git=1:2.34.1-1ubuntu1.11
