--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,10 +56,9 @@ pytest-mock = "^3.7.0"
 cfn-lint = "^0.65.1"
 gitpython = ">=2.1.0"
 localstack = "^3.1.0"
-# docker 7.0.0 is broken
-# see https://github.com/docker/docker-py/issues/3223
-docker = {version = "^6.1.3", markers = "sys_platform != 'win32'"}
+docker = {version = ">=7.1.0", markers = "sys_platform != 'win32'"}
 fabric = "^2.7.1"
+
 
 [tool.pytest.ini_options]
 minversion = "6.0"
