--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,8 +56,11 @@ pytest-mock = "^3.7.0"
 cfn-lint = "^0.65.1"
 gitpython = ">=2.1.0"
 localstack = "^3.1.0"
-docker = {version = ">=7.1.0", markers = "sys_platform != 'win32'"}
+# docker 7.0.0 is broken
+# see https://github.com/docker/docker-py/issues/3223
+docker = {version = "^6.1.3", markers = "sys_platform != 'win32'"}
 fabric = "^2.7.1"
+requests = "<=2.32.0"
 
 
 [tool.pytest.ini_options]
