--- a/.github/workflows/release_droid_upload_github_release_assets.yml
+++ b/.github/workflows/release_droid_upload_github_release_assets.yml
@@ -11,23 +11,29 @@ jobs:
   check-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Setup Python & Poetry Environment
-        uses: ./.github/actions/prepare_poetry_env
+        uses: exasol/python-toolbox/.github/actions/python-environment@0.13.0
+        with:
+          python-version: "3.10"
+          poetry-version: '1.8.2'
       - name: Build Release
-        run: ./scripts/build/check_release.sh "python3.10"
+        run: poetry run python3 -u "./scripts/build/check_release.py"
 
   upload:
     needs: check-release
     environment: AWS_RELEASE
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Setup Python & Poetry Environment
-        uses: ./.github/actions/prepare_poetry_env
+        uses: exasol/python-toolbox/.github/actions/python-environment@0.13.0
+        with:
+          python-version: "3.10"
+          poetry-version: '1.8.2'
       - name: Build Release
         run: poetry run python3 -m exasol.ds.sandbox.main start-release-build --upload-url "${{ github.event.inputs.upload_url }}" --branch "$GITHUB_REF"
         env: # Set the secret as an env variable
