--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -13,12 +13,13 @@ jobs:
     environment: AWS_CI_TESTS
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-    - name: Init submodules
-      run: git submodule update --init --recursive
     - name: Setup Python & Poetry Environment
-      uses: ./.github/actions/prepare_poetry_env
+      uses: exasol/python-toolbox/.github/actions/python-environment@0.13.0
+      with:
+        python-version: "3.10"
+        poetry-version: '1.8.2'
 
     - name: Start test release
       run: poetry run python3 -m exasol.ds.sandbox.main start-test-release-build --release-title  "${{ github.event.inputs.release_title }}" --branch "$GITHUB_REF"
