--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -58,7 +58,11 @@ jobs:
        run: df -h
 
      - name: Setup Python & Poetry Environment
-       uses: ./.github/actions/prepare_poetry_env
+       uses: exasol/python-toolbox/.github/actions/python-environment@0.13.0
+       with:
+         python-version: "3.10"
+         poetry-version: '1.8.2'
+
 
      - name: Run Integration Tests
        run: >
@@ -103,7 +107,11 @@ jobs:
        run: df -h
 
      - name: Setup Python & Poetry Environment
-       uses: ./.github/actions/prepare_poetry_env
+       uses: exasol/python-toolbox/.github/actions/python-environment@0.13.0
+       with:
+         python-version: "3.10"
+         poetry-version: '1.8.2'
+
 
      - name: Run notebook tests
        run: >
