--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -10,12 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-     - uses: actions/checkout@v3
+     - uses: actions/checkout@v4
        with:
          fetch-depth: 0
 
      - name: Setup Python & Poetry Environment
-       uses: ./.github/actions/prepare_poetry_env
+       uses: exasol/python-toolbox/.github/actions/python-environment@0.13.0
+       with:
+         python-version: "3.10"
+         poetry-version: '1.8.2'
 
      - name: Run Unit Tests
        run: >
@@ -55,7 +58,11 @@ jobs:
        run: df -h
 
      - name: Setup Python & Poetry Environment
-       uses: ./.github/actions/prepare_poetry_env
+       uses: exasol/python-toolbox/.github/actions/python-environment@0.13.0
+       with:
+         python-version: "3.10"
+         poetry-version: '1.8.2'
+
 
      - name: Run Integration Tests
        run: >
@@ -100,7 +107,11 @@ jobs:
        run: df -h
 
      - name: Setup Python & Poetry Environment
-       uses: ./.github/actions/prepare_poetry_env
+       uses: exasol/python-toolbox/.github/actions/python-environment@0.13.0
+       with:
+         python-version: "3.10"
+         poetry-version: '1.8.2'
+
 
      - name: Run notebook tests
        run: >
