--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,8 @@ localstack = "^3.1.0"
 # see https://github.com/docker/docker-py/issues/3223
 docker = {version = "^6.1.3", markers = "sys_platform != 'win32'"}
 fabric = "^2.7.1"
+requests = "<2.32.0"
+
 
 [tool.pytest.ini_options]
 minversion = "6.0"
