--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -18,6 +18,16 @@ jobs:
          python-version: "3.10"
          poetry-version: "1.8.2"
 
+     - name: Check Version Number
+       run: poetry run python3 -u "./scripts/build/check_release.py"
+
+     - name: Link Checker
+       id: lychee
+       uses: lycheeverse/lychee-action@v1.9.0
+       with:
+         fail: true
+         args: --verbose --no-progress 'doc/**/*.md' 'README.md'
+
      - name: Run Unit Tests
        run: >
          poetry run pytest
