--- a/.github/workflows/check_hyperlinks.yaml
+++ b/.github/workflows/check_hyperlinks.yaml
@@ -1,9 +1,7 @@
-name: Check Notebook Links
+name: Check Hyperlinks
 
 on:
-  push:
-    branches-ignore:
-      - "main"
+  pull_request:
 
 jobs:
   check_notebook_links:
@@ -19,7 +17,14 @@ jobs:
          python-version: "3.10"
          poetry-version: '1.8.2'
 
-     - name: Run build ai-lab tests
+     - name: Check Hyperlinks in Documentation
+       id: lychee
+       uses: lycheeverse/lychee-action@v1.9.0
+       with:
+         fail: true
+         args: --verbose --no-progress 'doc/**/*.md' 'README.md'
+
+     - name: Check Hyperlinks in Jupyter Notebooks
        run: >
          poetry run pytest --check-links exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/
 
