--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -12,6 +12,9 @@ jobs:
        with:
          fetch-depth: 0
 
+     - name: Run shellcheck
+       run: ./scripts/build/shellcheck.sh
+
      - name: Setup Python & Poetry Environment
        uses: exasol/python-toolbox/.github/actions/python-environment@0.13.0
        with:
