--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,11 @@
-name: CI Build
+name: CI
 
 on:
   pull_request:
 
 jobs:
   run-unit-tests:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
 
     steps:
