--- a/test/notebooks/pytest.ini
+++ b/test/notebooks/pytest.ini
@@ -4,3 +4,4 @@ filterwarnings =
     ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning
     ignore:pkg_resources is deprecated as an API:DeprecationWarning
     ignore:Deprecated call to \`pkg_resources.declare_namespace:DeprecationWarning
+    ignore::DeprecationWarning:luigi.*:
