Removed old code for ignoring warnings
Additionally: Added logging options to pytest.ini for notebook tests

--- a/test/notebooks/pytest.ini
+++ b/test/notebooks/pytest.ini
@@ -5,3 +5,6 @@ filterwarnings =
     ignore:pkg_resources is deprecated as an API:DeprecationWarning
     ignore:Deprecated call to \`pkg_resources.declare_namespace:DeprecationWarning
     ignore::DeprecationWarning:luigi.*:
+    ignore::DeprecationWarning:pkg_resources.*:
+log_cli = 1
+log_cli_level = INFO
