#295: Made notebook-tests mandatory for merge (#296)
* #295: Made notebook-tests mandatory for merge
* Updated GitHub workflow files
* Moved shell check to check_ci.yaml
* Removed hyperlinks checking from regular ci build
* Sorted notebook files before running notebook tests
* Added log message for executing each single notebook test file
* #193: Ignored warnings in notebook tests
* Moved logging options to pytest.ini for notebook tests
* #297: Reduced log level for transitive libraries in notebook tests
* Reduce logging in all notebooks

Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/.github/workflows/hyperlinks.yaml
+++ b/.github/workflows/hyperlinks.yaml
@@ -1,25 +1,31 @@
-name: Check Notebook Links
+name: Check Hyperlinks
 
 on:
-  push:
-    branches-ignore:
-      - "main"
+  pull_request:
 
 jobs:
-  check_notebook_links:
+  check-links:
+    name: Find Broken Links in Documentation and Jupyter Notebooks
     runs-on: ubuntu-latest
-
     steps:
+
      - uses: actions/checkout@v4
        with:
          fetch-depth: 0
+
      - name: Setup Python & Poetry Environment
        uses: exasol/python-toolbox/.github/actions/python-environment@0.13.0
        with:
          python-version: "3.10"
          poetry-version: '1.8.2'
 
-     - name: Run build ai-lab tests
+     - name: Check Hyperlinks in Documentation
+       id: lychee
+       uses: lycheeverse/lychee-action@v1.9.0
+       with:
+         fail: true
+         args: --verbose --no-progress 'doc/**/*.md' 'README.md'
+
+     - name: Check Hyperlinks in Jupyter Notebooks
        run: >
          poetry run pytest --check-links exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/
-
