--- a/test/notebooks/pytest.ini
+++ b/test/notebooks/pytest.ini
@@ -1,2 +1,10 @@
 [pytest]
 python_files = nbtest_*.py
+filterwarnings =
+    ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning
+    ignore:pkg_resources is deprecated as an API:DeprecationWarning
+    ignore:Deprecated call to \`pkg_resources.declare_namespace:DeprecationWarning
+    ignore::DeprecationWarning:luigi.*:
+    ignore::DeprecationWarning:pkg_resources.*:
+log_cli = 1
+log_cli_level = INFO
