--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ humanfriendly = "^10.0"
 tenacity = "^8.2.3"
 pygithub = "^2.2.0"
 importlib-metadata = "^7.0.1"
+passlib = "^1.7.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest-check-links = "^0.9.0"
