Removed package passlib
Used Python standard package crypt and forwarded hashed password to ansible.

--- a/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
@@ -1,16 +1,16 @@
-- name: set new default password
+- name: Set New Default Password
   ansible.builtin.user:
     name: "{{ansible_user}}"
     state: present
-    password: "{{ default_vm_password | password_hash('sha512') }}"
+    password: "{{ default_vm_password }}"
     password_lock: no
   become: "{{need_sudo}}"
 
-- name: make password expired
+- name: Make Password Expired
   ansible.builtin.command: "passwd -e {{ansible_user}}"
   become: "{{need_sudo}}"
 
-- name: Disable AWS cloud password lock for user ubuntu
+- name: Disable AWS Cloud Password Lock for User ubuntu
   become: "{{need_sudo}}"
   lineinfile:
     dest: /etc/cloud/cloud.cfg
@@ -19,7 +19,7 @@
     state: present
     backrefs: yes
 
-- name: Enable SSH password authentication
+- name: Enable SSH Password Authentication
   become: "{{need_sudo}}"
   lineinfile:
     dest: /etc/ssh/sshd_config
@@ -27,12 +27,20 @@
     line: 'PasswordAuthentication yes'
     state: present
 
-- name: remove .ssh directory
+- name: Enable SSH Keyboard Interactive Authentication
+  become: "{{need_sudo}}"
+  lineinfile:
+    dest: /etc/ssh/sshd_config
+    regexp: '^#?\s*KbdInteractiveAuthentication\s'
+    line: 'KbdInteractiveAuthentication yes'
+    state: present
+
+- name: Remove .ssh Directory
   ansible.builtin.file:
     path: "~/.ssh"
     state: absent
 
-- name: Restart ssh
+- name: Restart sshd
   become: "{{need_sudo}}"
   service:
     name: sshd
