--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ ansible = "^9.2.0"
 importlib_resources = ">=5.4.0"
 rich = "^12.5.1"
 pandas = "^1.4.0"
+numpy = "^1.26.4" # avoid version >= 2
 humanfriendly = "^10.0"
 tenacity = "^8.2.3"
 pygithub = "^2.2.0"
