FIxed PasswordAuthentication in additional config files, too

--- a/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
@@ -19,21 +19,18 @@
     state: present
     backrefs: yes
 
+- name: Find SSH Config Files
+  shell: ls /etc/ssh/sshd_config.d/* /etc/ssh/sshd_config
+  register: ssh_config_files
+
 - name: Enable SSH Password Authentication
   become: "{{need_sudo}}"
   lineinfile:
-    dest: /etc/ssh/sshd_config
+    dest: "{{ item }}"
     regexp: '^#?\s*PasswordAuthentication\s'
     line: 'PasswordAuthentication yes'
     state: present
-
-- name: Enable SSH Keyboard Interactive Authentication
-  become: "{{need_sudo}}"
-  lineinfile:
-    dest: /etc/ssh/sshd_config
-    regexp: '^#?\s*KbdInteractiveAuthentication\s'
-    line: 'KbdInteractiveAuthentication yes'
-    state: present
+  with_items: "{{ ssh_config_files.stdout_lines }}"
 
 - name: Remove .ssh Directory
   ansible.builtin.file:
