Fixed review findings.

--- a/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
@@ -2,7 +2,7 @@
   ansible.builtin.user:
     name: "{{ansible_user}}"
     state: present
-    password: "{{ default_vm_password }}"
+    password: "{{ default_vm_password_hash }}"
     password_lock: no
   become: "{{need_sudo}}"
 
