Added comment regarding ssh password authentication vs. keyboard-interactive

--- a/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
@@ -23,6 +23,15 @@
   shell: ls /etc/ssh/sshd_config.d/* /etc/ssh/sshd_config
   register: ssh_config_files
 
+# PasswordAuthentication needs to be "yes" in all relevant config files, see
+# https://superuser.com/a/1828947.
+#
+# In this case KbdInteractiveAuthentication can be "no".
+#
+# Authentication via fabric/paramiko in Python test cases in
+# test/codebuild/test_ci.py also requires genuine password authentication and
+# fails when having only keyboard-interactive authentication.
+
 - name: Enable SSH Password Authentication
   become: "{{need_sudo}}"
   lineinfile:
