Replaced shell ls by ansible.builtin.find

--- a/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
@@ -20,8 +20,11 @@
     backrefs: yes
 
 - name: Find SSH Config Files
-  shell: ls /etc/ssh/sshd_config.d/* /etc/ssh/sshd_config
-  register: ssh_config_files
+  find:
+    paths: /etc/ssh/sshd_config.d
+    file_type: file
+    recurse: true
+  register: sshd_config_d
 
 # PasswordAuthentication needs to be "yes" in all relevant config files, see
 # https://superuser.com/a/1828947.
@@ -39,7 +42,9 @@
     regexp: '^#?\s*PasswordAuthentication\s'
     line: 'PasswordAuthentication yes'
     state: present
-  with_items: "{{ ssh_config_files.stdout_lines }}"
+  with_items:
+    - "{{ sshd_config_d.files | map(attribute='path') }}"
+    - /etc/ssh/sshd_config
 
 - name: Remove .ssh Directory
   ansible.builtin.file:
