--- a/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/reset_password_tasks.yml
@@ -1,16 +1,16 @@
-- name: set new default password
+- name: Set New Default Password
   ansible.builtin.user:
     name: "{{ansible_user}}"
     state: present
-    password: "{{ default_vm_password | password_hash('sha512') }}"
+    password: "{{ default_vm_password_hash }}"
     password_lock: no
   become: "{{need_sudo}}"
 
-- name: make password expired
+- name: Make Password Expired
   ansible.builtin.command: "passwd -e {{ansible_user}}"
   become: "{{need_sudo}}"
 
-- name: Disable AWS cloud password lock for user ubuntu
+- name: Disable AWS Cloud Password Lock for User ubuntu
   become: "{{need_sudo}}"
   lineinfile:
     dest: /etc/cloud/cloud.cfg
@@ -19,20 +19,39 @@
     state: present
     backrefs: yes
 
-- name: Enable SSH password authentication
+- name: Find SSH Config Files
+  find:
+    paths: /etc/ssh/sshd_config.d
+    file_type: file
+    recurse: true
+  register: sshd_config_d
+
+# PasswordAuthentication needs to be "yes" in all relevant config files, see
+# https://superuser.com/a/1828947.
+#
+# In this case KbdInteractiveAuthentication can be "no".
+#
+# Authentication via fabric/paramiko in Python test cases in
+# test/codebuild/test_ci.py also requires genuine password authentication and
+# fails when having only keyboard-interactive authentication.
+
+- name: Enable SSH Password Authentication
   become: "{{need_sudo}}"
   lineinfile:
-    dest: /etc/ssh/sshd_config
+    dest: "{{ item }}"
     regexp: '^#?\s*PasswordAuthentication\s'
     line: 'PasswordAuthentication yes'
     state: present
+  with_items:
+    - "{{ sshd_config_d.files | map(attribute='path') }}"
+    - /etc/ssh/sshd_config
 
-- name: remove .ssh directory
+- name: Remove .ssh Directory
   ansible.builtin.file:
     path: "~/.ssh"
     state: absent
 
-- name: Restart ssh
+- name: Restart sshd
   become: "{{need_sudo}}"
   service:
     name: sshd
