--- a/exasol/ds/sandbox/templates/vm_bucket_cloudformation.jinja.yaml
+++ b/exasol/ds/sandbox/templates/vm_bucket_cloudformation.jinja.yaml
@@ -119,13 +119,13 @@ Resources:
 Outputs:
   {{BucketId}}:
     Value: !Ref VMBucket
-    Description: ID of the S3 bucket.
+    Description: ID of the S3 bucket containing the AI-Lab VM Images.
   {{ExportRoleId}}:
     Value: !Ref VMExportRole
-    Description: ID of the Role needed to access the bucket.
+    Description: ID of the Role needed to access the VMBucket.
   {{CfDistributionId}}:
     Value: !Ref CfDistribution
-    Description: ID of the related cloudfront distribution.
+    Description: ID of the cloudfront distribution for the VMBucket.
   {{CfDistributionDomainName}}:
     Value: !GetAtt CfDistribution.DomainName
-    Description: Domain name of the related cloudfront distribution.
+    Description: Domain name of the cloudfront distribution for the VMBucket.
