--- a/test/unit/aws/rendered-cf-templates/vm-bucket.yml
+++ b/test/unit/aws/rendered-cf-templates/vm-bucket.yml
@@ -57,7 +57,7 @@ Resources:
             Principal:
               Service: "cloudfront.amazonaws.com"
             Resource:
-              - !Sub "arn:aws:s3:::${ VMBucket }/{{path_in_bucket}}/*"
+              - !Sub "arn:aws:s3:::${ VMBucket }/ai_lab/*"
             Condition:
               StringEquals:
                 'AWS:SourceArn': !Sub "arn:aws:cloudfront::${AWS::AccountId}:distribution/${CfDistribution}"
@@ -90,7 +90,7 @@ Resources:
         Enabled: true
         HttpVersion: 'http1.1'
         IPV6Enabled: true
-        WebACLId: {{acl_arn}}
+        WebACLId: TEST-DOWNLOAD-ACL
         Origins:
           - DomainName: !GetAtt VMBucket.DomainName
             Id: !Sub 's3-origin-${ VMBucket }'
@@ -117,15 +117,15 @@ Resources:
           SigningProtocol: sigv4
 
 Outputs:
-  {{BucketId}}:
+  VMBucketId:
     Value: !Ref VMBucket
     Description: ID of the S3 bucket containing the AI-Lab VM Images.
-  {{ExportRoleId}}:
+  VMExportRoleId:
     Value: !Ref VMExportRole
     Description: ID of the Role needed to access the VMBucket.
-  {{CfDistributionId}}:
+  CfDistributionId:
     Value: !Ref CfDistribution
     Description: ID of the cloudfront distribution for the VMBucket.
-  {{CfDistributionDomainName}}:
+  CfDistributionDomainName:
     Value: !GetAtt CfDistribution.DomainName
     Description: Domain name of the cloudfront distribution for the VMBucket.
