--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,10 @@ jobs:
     needs: run-unit-tests
 
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Prepare Test Environment
         uses: ./.github/actions/prepare_test_env.yml
 
