#307 Made each notebook test a separate job

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,8 +44,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Prepare Test Environment
-        uses: ./.github/actions/prepare_test_env.yml
+      - uses: ./.github/actions/prepare_test_env/
 
       - name: Run Integration Tests
         run: >
