--- a/.github/workflows/notebook_tests.yaml
+++ b/.github/workflows/notebook_tests.yaml
@@ -53,3 +53,53 @@ jobs:
           SAAS_HOST: ${{ secrets.INTEGRATION_TEAM_SAAS_STAGING_HOST }}
           SAAS_ACCOUNT_ID: ${{ secrets.INTEGRATION_TEAM_SAAS_STAGING_ACCOUNT_ID }}
           SAAS_PAT: ${{ secrets.INTEGRATION_TEAM_SAAS_STAGING_PAT }}
+
+  slc:
+    name: Running nbtest_script_languages_container.py
+    environment: AWS_SAGEMAKER
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: ./.github/actions/prepare_test_env/
+
+      - name: Run notebook tests
+        run: |
+          poetry run pytest \
+            --capture=no \
+            --override-ini=log_cli=true \
+            --override-ini=log_cli_level=INFO \
+            --nb-test-file=nbtest_script_languages_container.py \
+            test/notebook_test_runner/test_notebooks_in_dss_docker_image.py
+        env:
+          SAAS_HOST: ${{ secrets.INTEGRATION_TEAM_SAAS_STAGING_HOST }}
+          SAAS_ACCOUNT_ID: ${{ secrets.INTEGRATION_TEAM_SAAS_STAGING_ACCOUNT_ID }}
+          SAAS_PAT: ${{ secrets.INTEGRATION_TEAM_SAAS_STAGING_PAT }}
+
+  misc:
+    name: Running relatively short notebook tests
+    environment: AWS_SAGEMAKER
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: ./.github/actions/prepare_test_env/
+
+      - name: Run notebook tests
+        run: |
+          poetry run pytest \
+            --capture=no \
+            --override-ini=log_cli=true \
+            --override-ini=log_cli_level=INFO \
+            --nb-test-file="nbtest_environment_test.py nbtest_itde.py" \
+            test/notebook_test_runner/test_notebooks_in_dss_docker_image.py
+        env:
+          SAAS_HOST: ${{ secrets.INTEGRATION_TEAM_SAAS_STAGING_HOST }}
+          SAAS_ACCOUNT_ID: ${{ secrets.INTEGRATION_TEAM_SAAS_STAGING_ACCOUNT_ID }}
+          SAAS_PAT: ${{ secrets.INTEGRATION_TEAM_SAAS_STAGING_PAT }}
