--- a/.github/workflows/notebook_tests.yaml
+++ b/.github/workflows/notebook_tests.yaml
@@ -14,7 +14,7 @@ jobs:
           - { name: "sklearn notebook", test_file: "nbtest_sklearn.py" }
           - { name: "ibis notebook", test_file: "nbtest_ibis.py" }
           - { name: "SLC notebook", test_file: "nbtest_script_languages_container.py" }
-          - { name: "short notebook tests", test_file: "nbtest_environment_test.py nbtest_itde.py"}
+          - { name: "short notebook tests", test_file: "\"nbtest_environment_test.py nbtest_itde.py\""}
     name: Running ${{ matrix.nb_test.name }}
     steps:
       - uses: actions/checkout@v4
