--- a/test/unit/aws/rendered-cf-templates/vm-bucket-waf.yml
+++ b/test/unit/aws/rendered-cf-templates/vm-bucket-waf.yml
@@ -4,7 +4,7 @@ Resources:
     Properties:
       Name: DssVMDownloadLimitationWebACL
       Scope: CLOUDFRONT
-      Description: This Web ACL contains rule to control access to the VM Bucket cloudfront distribution.
+      Description: This Web ACL controls access to the VM Bucket cloudfront distribution.
       DefaultAction:
         Allow: {}
       VisibilityConfig:
@@ -50,4 +50,4 @@ Resources:
 Outputs:
   VMDownloadACLArn:
     Value: !GetAtt VMDownloadACL.Arn
-    Description: "Arn of the VM Download ACL"
+    Description: Arn of the VM Download ACL
