--- a/.github/workflows/notebook_tests.yaml
+++ b/.github/workflows/notebook_tests.yaml
@@ -11,6 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         nb_test:
+          - { name: "CSE notebook", test_file: "nbtest_cloud.py" }
           - { name: "sklearn notebook", test_file: "nbtest_sklearn.py" }
           - { name: "ibis notebook", test_file: "nbtest_ibis.py" }
           - { name: "SLC notebook", test_file: "nbtest_script_languages_container.py" }
